--- a/style.css
+++ b/style.css
@@ -123,3 +123,8 @@ body {
 
 
 /* ============ /front ==========*/
+
+@media screen and (max-width : 600px ){
+    .container{
+        width: 560px;
+}
